fix align

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -117,6 +117,9 @@
     &-title {
       margin-bottom: 70px;
     }
+    &-programs {
+      justify-content: center;
+    }
     &-program {
       margin-bottom: 150px;
     }
